media/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  replicas: 0
  template:
    spec:
      containers:
        - name: bazarr
          image: linuxserver/bazarr@sha256:3dda85b4539181ec8ab3c588b948e84599324635e477830b4dc75cf78bee14f7
          ports:
            - name: http
              containerPort: 6767
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: data
          persistentVolumeClaim:
            claimName: media-data
