media/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  selector:
    app: bazarr
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
